# ros2-igus-rebel

./: .gitignore  README.md  aruco_follower_script.sh  button_presser_demo_script.sh
aruco_action_interfaces/: CMakeLists.txt  package.xml
igus_rebel_commander/: CMakeLists.txt  README.md  aruco_follower_script.sh  package.xml
igus_rebel_commander/action/: FollowAruco.action  MoveManipulator.action
igus_rebel_commander/include/: aruco_action_server.hpp  aruco_follower.h  aruco_toucher.hpp  button_presser.h  button_presser.hpp  button_presser_action_servers.hpp  goal_pose_publisher.h  manipulator_action_server.hpp
igus_rebel_commander/launch/: aruco_action_server.launch.py  aruco_follower_demo.launch.py  aruco_toucher.launch.py  button_press_demo.launch.py  commander_demo.launch.py  demo.launch.py  demo_complete.launch.py  manipulator_action_server.launch.py  test_button_pose_computation.launch.py  test_goal_pose.launch.py
igus_rebel_commander/rviz/: aruco_demo.rviz  aruco_follower.rviz  aruco_pose_test.rviz  button_presser.rviz  button_test.rviz  cmd.rviz
igus_rebel_commander/src/: aruco_action_server.cpp  aruco_follower.cpp  aruco_toucher.cpp  button_presser.cpp  button_presser_action_servers.cpp  button_presser_main_demo.cpp  commander.cpp  goal_pose_publisher.cpp  manipulator_action_server.cpp
igus_rebel_commander/test/: test_button_pose_computation.cpp  test_goal_pose_computation.cpp
igus_rebel_description_ros2/: CMakeLists.txt  README.md  package.xml
igus_rebel_description_ros2/launch/: visualize.launch.py
igus_rebel_description_ros2/meshes/end_effectors/: gripper_collision_mesh.stl  gripper_mount.stl  gripper_mount_collision_mesh.stl
igus_rebel_description_ros2/meshes/igus_rebel/: Joint0.dae  Joint1.dae  Joint2.dae  Joint3.dae  Joint4.dae  Joint5.dae  Joint6.dae
igus_rebel_description_ros2/meshes/igus_rebel_mod/: Joint0.stl  Joint1.stl  Joint2.stl  Joint3.stl  Joint4.stl  Joint5.stl  Joint6.stl  Robolink_RebeL_002_1.stl  Robolink_RebeL_002_2.stl  Robolink_RebeL_004.stl
igus_rebel_description_ros2/meshes/mounts/: mount_v1.stl  mount_v2.stl  mount_v2_collision_mesh.stl
igus_rebel_description_ros2/meshes/robolink_rebel/: Robolink_RebeL_000.stl  Robolink_RebeL_001.dae  Robolink_RebeL_001.stl  Robolink_RebeL_002.stl  Robolink_RebeL_002_0.dae  Robolink_RebeL_002_0.stl  Robolink_RebeL_002_1.dae  Robolink_RebeL_002_2.dae  Robolink_RebeL_003.stl  Robolink_RebeL_005.stl  Robolink_RebeL_006.dae
igus_rebel_description_ros2/rviz/: rebel.rviz  rebel_on_scout.rviz
igus_rebel_description_ros2/urdf/: igus_rebel.control.xacro  igus_rebel.description.xacro  igus_rebel.urdf.xacro  igus_rebel_mod.control.xacro  igus_rebel_mod.description.xacro  igus_rebel_mod.urdf.xacro  robot.urdf.xacro
igus_rebel_description_ros2/urdf/cameras/: cameras.urdf.xacro  oak_d_pro_camera.xacro  realsense_d435_camera.xacro  virtual_camera_frames.xacro
igus_rebel_description_ros2/urdf/end_effectors/: soft_gripper.control.xacro  soft_gripper.description.xacro  toucher_v1.xacro
igus_rebel_description_ros2/urdf/grippers/: grippers.macro.xacro  grippers.xacro
igus_rebel_description_ros2/urdf/igus_rebel/: igus_rebel.control.xacro  igus_rebel.description.xacro  igus_rebel.gazebo.xacro  igus_rebel.urdf.xacro  igus_rebel_mod.description.xacro  igus_rebel_mod.urdf.xacro
igus_rebel_description_ros2/urdf/mobile_robot/: castle.urdf  castle.xacro  scout_v2.xacro  scout_wheel_type1.xacro  scout_wheel_type2.xacro
igus_rebel_description_ros2/urdf/mounts/: mount_v1.xacro  mount_v2.xacro
igus_rebel_gazebo_ignition/: CMakeLists.txt  README.md  package.xml
igus_rebel_gazebo_ignition/config/: bridge_description.yaml  bridge_moveit.yaml  gazebo_gui_description.config  gazebo_gui_moveit.config
igus_rebel_gazebo_ignition/launch/: ignition.launch.py
igus_rebel_gazebo_ignition/worlds/: default.sdf
igus_rebel_gripper_controller/: CMakeLists.txt  README.md  gripper_controller.xml  package.xml
igus_rebel_gripper_controller/include/: gripper_controller.hpp
igus_rebel_gripper_controller/pump_control/: pump_control.ino
igus_rebel_gripper_controller/src/: gripper_controller.cpp
igus_rebel_gripper_controller/srv/: GripperActuation.srv
igus_rebel_hw_controller/: CMakeLists.txt  README.md  igus_rebel_hw_controller.xml  igus_rebel_simulation_controller.xml  package.xml
igus_rebel_hw_controller/include/: cri_keywords.h  cri_messages.h  cri_socket.h  rebel_controller.h  simulation_controller.h
igus_rebel_hw_controller/src/: cri_messages.cpp  cri_socket.cpp  rebel_controller.cpp  simulation_controller.cpp
igus_rebel_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
igus_rebel_moveit_config/config/: igus_rebel.srdf  igus_rebel.srdf.xacro  igus_rebel.urdf.xacro  igus_rebel_base.srdf  igus_rebel_camera.srdf  igus_rebel_mod.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_py.yaml  multiple_planning_pipelines.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  pilz_industrial_planner.yaml  ros2_controllers.yaml  sensors_3d.yaml  stomp_planning.yaml
igus_rebel_moveit_config/launch/: demo.launch.py  moveit_controller.launch.py
igus_rebel_moveit_config/moveit_launch/: moveit_loader.py
igus_rebel_moveit_config/rviz/: moveit.rviz
igus_rebel_servo/: CMakeLists.txt  README.md  package.xml
igus_rebel_servo/config/: igus_rebel_servo.yaml
igus_rebel_servo/include/: goal_pose_publisher.h
igus_rebel_servo/launch/: realtime_servo.launch.py  test_goal_pose.launch.py
igus_rebel_servo/rviz/: goal_demo.rviz  servo_demo.rviz
igus_rebel_servo/src/: goal_pose_publisher.cpp  realtime_servoing.cpp
src/igus_rebel_commander/: CMakeLists.txt  README.md  package.xml
src/igus_rebel_commander/launch/: command.launch.py
src/igus_rebel_commander/src/: commander_main.cpp  commander_v2.cpp
src/igus_rebel_description_ros2/: CMakeLists.txt  package.xml
src/igus_rebel_hw_controller/: CMakeLists.txt  igus_rebel_fake_controller.xml  igus_rebel_hw_controller.xml  package.xml
src/igus_rebel_hw_controller/include/: cri_messages.h  (+3 more)
(+41 files in other folders)
