<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aruco_action_interfaces</name>
  <version>0.1.0</version>
  <description>Aruco Marker pose estimation actions interfaces for ROS2</description>
  <maintainer email="riccardo.izzo@mail.polimi.it">Riccardo Izzo</maintainer>
  <license>AIRLAB</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>action_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
</package>
