<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>igus_rebel_commander</name>
	<version>0.1.0</version>
	<description> MoveIt2 C++ interface for commanding the robot. Demo scripts
		for giving a goal position in both cartesian space and robot joint space
	</description>

	<maintainer email="simone.giampa@mail.polimi.it">Simone Giampà</maintainer>
	<license>AIRLAB</license>
	<url type="website">polimi.it</url>
	<url type="repository">https://github.com/SimonGiampy/ros2-igus-rebel</url>
	<author email="simone.giampa@mail.polimi.it">Simone Giampà</author>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<exec_depend>moveit_planners</exec_depend>
	<exec_depend>joint_state_publisher</exec_depend>
	<exec_depend>joint_state_publisher_gui</exec_depend>
	<exec_depend>xacro</exec_depend>
	<exec_depend>joint_trajectory_controller</exec_depend>

	<exec_depend>igus_rebel_description_ros2</exec_depend>
	<exec_depend>moveit_ros_move_group</exec_depend>
	<exec_depend>moveit_ros_visualization</exec_depend>
	<exec_depend>rviz2</exec_depend>
	<exec_depend>rviz_common</exec_depend>
	<exec_depend>rviz_default_plugins</exec_depend>


	<depend>rclcpp</depend>
	<depend>moveit_visual_tools</depend>
	<depend>moveit_core</depend>
	<depend>pluginlib</depend>
	<depend>moveit_kinematics</depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>


	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>