<?xml version="1.0"?>
<package format="3">
	<name>igus_rebel_hw_controller</name>
	<version>0.1.0</version>
	<description>ROS2 package to control an igus ReBeL cobot.</description>

	<maintainer email="simone.giampa@mail.polimi.it">Simone Giampà</maintainer>
	<license>AIRLAB</license>
	<url type="website">polimi.it</url>
	<url type="repository">https://github.com/AIRLab-POLIMI/ros2-igus-rebel</url>
	<author email="simone.giampa@mail.polimi.it">Simone Giampà</author>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>rclcpp</depend>
	<depend>std_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>control_msgs</depend>
	<depend>controller_manager</depend>
	<depend>controller_manager_msgs</depend>
	<depend>controller_interface</depend>
	<depend>hardware_interface</depend>
	<depend>rviz2</depend>
	<depend>rclcpp_lifecyle</depend>
	<depend>ros2_control</depend>
	<depend>pluginlib</depend>
	

	<test_depend>ros2_controllers_test_nodes</test_depend>
	<test_depend>ament_lint_auto</test_depend>
	<!-- this recursively depends on a set of common linters -->
	<test_depend>ament_lint_common</test_depend>
	<test_depend>hardware_interface</test_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
		<build_type>ament_cmake</build_type>
	</export>
</package>