<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>igus_rebel_moveit_config</name>
	<version>0.1.0</version>
	<description> MoveIt2 package configuration files and the ros2 controller embeddings for the
		Igus Rebel robot. </description>

	<maintainer email="simone.giampa@mail.polimi.it">Simone Giampà</maintainer>
	<license>AIRLAB</license>
	<url type="website">polimi.it</url>
	<url type="repository">https://github.com/AIRLab-POLIMI/ros2-igus-rebel</url>
	<author email="simone.giampa@mail.polimi.it">Simone Giampà</author>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<build_depend>ament_cmake_python</build_depend>
	<build_depend>setup_assistant</build_depend>

	<exec_depend>moveit_ros_move_group</exec_depend>
	<exec_depend>moveit_kinematics</exec_depend>
	<exec_depend>moveit_planners</exec_depend>
	<exec_depend>moveit_simple_controller_manager</exec_depend>
	<exec_depend>joint_state_publisher</exec_depend>
	<exec_depend>joint_state_publisher_gui</exec_depend>
	<exec_depend>tf2_ros</exec_depend>
	<exec_depend>xacro</exec_depend>

	<exec_depend>joint_trajectory_controller</exec_depend>
	<exec_depend>controller_manager</exec_depend>
	<exec_depend>igus_rebel_description_ros2</exec_depend>
	<exec_depend>moveit_configs_utils</exec_depend>
	<exec_depend>moveit_ros_move_group</exec_depend>
	<exec_depend>moveit_ros_visualization</exec_depend>
	<exec_depend>moveit_setup_assistant</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>rviz2</exec_depend>
	<exec_depend>rviz_common</exec_depend>
	<exec_depend>rviz_default_plugins</exec_depend>
	<exec_depend>tf2_ros</exec_depend>
	<exec_depend>xacro</exec_depend>


	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>