<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>igus_rebel_servo</name>
	<version>0.1.0</version>
	<description> Realtime Servoing with Moveit2 and ROS2 for the Igus Rebel 6-axis robot arm</description>

	<maintainer email="simone.giampa@mail.polimi.it">Simone Giampà</maintainer>
	<license>AIRLAB</license>
	<url type="website">polimi.it</url>
	<url type="repository">https://github.com/SimonGiampy/ros2-igus-rebel</url>
	<author email="simone.giampa@mail.polimi.it">Simone Giampà</author>

	<buildtool_depend>ament_cmake</buildtool_depend>
	
	<depend>rviz2</depend>
	<depend>moveit_servo</depend>
	<depend>rclcpp</depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>
	<test_depend>ament_cmake_gtest</test_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
		<build_type>ament_cmake</build_type>
	</export>
</package>