<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>igus_rebel_servo</name>
	<version>0.1.0</version>
	<description> Realtime Servoing with Moveit2 and ROS2 for the Igus Rebel 6-axis robot arm</description>

	<maintainer email="simone.giampa@mail.polimi.it">Simone Giampà</maintainer>
	<license>AIRLAB</license>
	<url type="website">polimi.it</url>
	<url type="repository">https://github.com/SimonGiampy/ros2-igus-rebel</url>
	<author email="simone.giampa@mail.polimi.it">Simone Giampà</author>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<depend>moveit_common</depend>

	<depend>control_msgs</depend>
	<depend>generate_parameter_library</depend>
	<depend>geometry_msgs</depend>
	<depend>moveit_msgs</depend>
	<depend>moveit_core</depend>
	<depend>moveit_ros_planning_interface</depend>
	<depend>pluginlib</depend>
	<depend>realtime_tools</depend>
	<depend>sensor_msgs</depend>
	<depend>std_msgs</depend>
	<depend>std_srvs</depend>
	<depend>tf2_eigen</depend>
	<depend>trajectory_msgs</depend>

	<exec_depend>controller_manager</exec_depend>
	<exec_depend>gripper_controllers</exec_depend>
	<exec_depend>joint_state_broadcaster</exec_depend>
	<exec_depend>joint_trajectory_controller</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>tf2_ros</exec_depend>
	<exec_depend>moveit_configs_utils</exec_depend>
	<exec_depend>launch_param_builder</exec_depend>

	<test_depend>ament_cmake_gtest</test_depend>
	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>
	<test_depend>moveit_resources_panda_moveit_config</test_depend>
	<test_depend>ros_testing</test_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>

</package>