<?xml version="1.0"?>
<package format="3">
	<name>igus_rebel_description_ros2</name>
	<version>0.0.0</version>
	<description>The igus_rebel_description package</description>

	<maintainer email="simone.giampa@mail.polimi.it">Simone Giampà</maintainer>

	<license>AIRLAB</license>

	<!-- <url type="website">http://wiki.ros.org/igus_rebel_description</url> -->

	<author email="simone.giampa@mail.polimi.it">Simone Giampà</author>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<exec_depend>rviz2</exec_depend>
	<exec_depend>urdf</exec_depend>
	<exec_depend>xacro</exec_depend>
	<depend>joint_state_publisher_gui</depend>
	<depend>pluginlib</depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>
	<test_depend>ament_cmake_gtest</test_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
		<build_type>ament_cmake</build_type>
	</export>
</package>